fix modal과 header 간의 z-index 조정

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -6,7 +6,7 @@
   transition-duration: 500ms;
   top:0;
   left: 0;
-  z-index: 100;
+  z-index: 10;
   grid-area: header;
   display: flex;
   justify-content: space-between;
